# scd30-interface

./: .codecov.yaml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  audit.toml
.github/workflows/: integration.yaml  sbom.yaml
src/: command.rs  error.rs  interface.rs  lib.rs  util.rs
src/data/: altitude_compensation.rs  ambient_pressure.rs  automatic_self_calibration.rs  data_status.rs  firmware_version.rs  forced_recalibration_value.rs  measurement.rs  measurement_interval.rs  mod.rs  temperature_offset.rs
