[package]
authors = ["Felix 'Gronner' Bräunling <gronner@mailbox.org>"]
categories = ["embedded", "no-std"]
description = "An I2C driver for the SCD30 sensor in Rust."
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["sensor", "co2", "i2c"]
name = "scd30-interface"
readme = "README.md"
repository = "https://github.com/Gronner/scd30-interface"
rust-version = "1.78.0"
version = "2.0.0"

[dependencies]
byteorder = { version = "1.5.0", default-features = false }
defmt = { version = "0.3.8", optional = true }
duplicate = { version = "2.0.0", default-features = false }
embedded-hal = "1.0.0"
embedded-hal-async = { version ="1.0.0", optional = true }
thiserror = { version = "2.0.9", default-features = false }

[features]
default = ["blocking"]
blocking = []
async = ["embedded-hal-async"]
defmt = ["embedded-hal-async/defmt-03", "embedded-hal/defmt-03", "dep:defmt"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
tokio = { version = "1.42.0", features = ["macros", "rt"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }
